<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpVerificationActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextViewTitleMedium20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/otp_verification"
                android:textColor="@color/colorGrey_900" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtStatus"
                style="@style/TextViewTitleRegular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey_700" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                style="@style/ImageView56"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_dialpad"

                android:tint="#FFEA00"
                app:tint="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOTP"
                style="@style/CommonTIL"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:hint="@string/otp_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@color/colorGrey_900"
                    android:textSize="20sp"
                    app:fontFamily="@font/medium"
                    android:maxLength="6"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextViewTitleRegular14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/resend_otp_in"
                        android:textColor="@color/colorGrey_700" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtTime"
                        style="@style/TextViewTitleMedium22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorGrey_700" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/btnResendOTP"
                    style="@style/TextViewTitleMedium16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp"
                    android:textColor="@color/darkYellow"
                    android:visibility="invisible"

                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btnVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:animateLayoutChanges="true"
                android:background="@color/darkYellow"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtVerify"
                    style="@style/TextViewTitleMedium16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/verify_otp"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgVerify"
                    style="@style/ImageView48"
                    android:src="@drawable/ic_next"
                    app:tint="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtBottom"
            style="@style/TextViewTitleRegular12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:paddingStart="32dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"
            android:paddingBottom="16dp"
            android:text="@string/don_t_worry_your_phone_number_will_not_be_shared_with_anyone_please_read_our_terms_of_service_and_privacy_policy"
            android:textColor="@color/colorGrey_900" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>